syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package="./face_recognizer";

service FaceRecognizer {
  rpc RecognizeFace(RecognizeFaceRequest) returns (RecognizeFaceResponse) {};
  rpc Train(TrainRequest) returns (google.protobuf.Empty) {};
}

message RecognizeFaceRequest {
  Face face = 1;
}

message RecognizeFaceResponse {
  string person_name = 1;
  FaceLocation face_location = 2;
}

message TrainRequest {
  Face face = 1;
  string person_name = 2;
}

message Face {
  bytes data = 1;
}

message FaceLocation {
  uint32 left = 1;
  uint32 top = 2;
  uint32 right = 3;
  uint32 bottom = 4;
}
